src/objects/PMD_ProgramWithAttachments__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Attachment_URL__c</fullName>
        <label>Attachment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GoogleDoc_URL__c</fullName>
        <label>GoogleDoc URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PMD_Program_URL__c</fullName>
        <label>PMD_Program URL</label>
        <type>Url</type>
    </fields>
    <label>PMD_ProgramWithAttachments</label>
</CustomObject>